// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flowchartFamily > 'accessible titles' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "description": "How a draft ships",
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M26.49,94.2L23.49,85.2L29.49,85.2Z",
      "classes": [],
      "d": "M26.49,46.2L26.49,85.2",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 26.49,
          "y": 46.2,
        },
        {
          "x": 26.49,
          "y": 85.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 4,
        "offset": 70,
      },
      "startArrow": "none",
      "target": "B",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "A",
        ],
        "width": 8.98,
      },
      "outline": "M-12.49,-19.1L12.49,-19.1A6,6 0 0 1 18.49,-13.1L18.49,13.1A6,6 0 0 1 12.49,19.1L-12.49,19.1A6,6 0 0 1 -18.49,13.1L-18.49,-13.1A6,6 0 0 1 -12.49,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 4,
        "offset": 70,
      },
      "width": 36.98,
      "x": 26.49,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 4,
        "offset": 70,
      },
      "width": 36.51,
      "x": 26.49,
      "y": 113.3,
    },
  ],
  "size": {
    "height": 140.4,
    "width": 52.98,
  },
  "title": "Publish flow",
}
`;

exports[`flowchartFamily > 'bottom up BT' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M30.6,132.4L33.6,141.4L27.6,141.4Z",
      "classes": [],
      "d": "M41.38,180.4L41.38,163.9C41.38,156.4 30.6,156.4 30.6,148.9L30.6,141.4",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 41.38,
          "y": 180.4,
        },
        {
          "x": 41.38,
          "y": 156.4,
        },
        {
          "x": 30.6,
          "y": 156.4,
        },
        {
          "x": 30.6,
          "y": 141.4,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M56.51,46.2L59.51,55.2L53.51,55.2Z",
      "classes": [],
      "d": "M34.95,94.2L34.95,76.2Q34.95,70.2 40.95,70.2L50.51,70.2Q56.51,70.2 56.51,64.2L56.51,55.2",
      "id": "B->C#1",
      "line": "solid",
      "points": [
        {
          "x": 34.95,
          "y": 94.2,
        },
        {
          "x": 34.95,
          "y": 70.2,
        },
        {
          "x": 56.51,
          "y": 70.2,
        },
        {
          "x": 56.51,
          "y": 55.2,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M65.51,46.2L68.51,55.2L62.51,55.2Z",
      "classes": [],
      "d": "M50.38,180.4L50.38,92.03C50.38,79.75 65.51,79.75 65.51,67.47L65.51,55.2",
      "id": "A->C#2",
      "line": "solid",
      "points": [
        {
          "x": 50.38,
          "y": 180.4,
        },
        {
          "x": 50.38,
          "y": 113.3,
        },
        {
          "x": 50.38,
          "y": 79.75,
        },
        {
          "x": 65.51,
          "y": 79.75,
        },
        {
          "x": 65.51,
          "y": 55.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 4,
        "offset": 35,
      },
      "startArrow": "none",
      "target": "C",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "A",
        ],
        "width": 8.98,
      },
      "outline": "M-12.49,-19.1L12.49,-19.1A6,6 0 0 1 18.49,-13.1L18.49,13.1A6,6 0 0 1 12.49,19.1L-12.49,19.1A6,6 0 0 1 -18.49,13.1L-18.49,-13.1A6,6 0 0 1 -12.49,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.98,
      "x": 45.88,
      "y": 199.5,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.51,
      "x": 26.25,
      "y": 113.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "C",
        ],
        "width": 9.5,
      },
      "outline": "M-12.75,-19.1L12.75,-19.1A6,6 0 0 1 18.75,-13.1L18.75,13.1A6,6 0 0 1 12.75,19.1L-12.75,19.1A6,6 0 0 1 -18.75,13.1L-18.75,-13.1A6,6 0 0 1 -12.75,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "width": 37.5,
      "x": 65.51,
      "y": 27.1,
    },
  ],
  "size": {
    "height": 226.6,
    "width": 92.26,
  },
}
`;

exports[`flowchartFamily > 'cycles and self loops' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M35.51,94.2L32.51,85.2L38.51,85.2Z",
      "classes": [],
      "d": "M92.02,46.2L92.02,64.2Q92.02,70.2 86.02,70.2L41.51,70.2Q35.51,70.2 35.51,76.2L35.51,85.2",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 92.02,
          "y": 46.2,
        },
        {
          "x": 92.02,
          "y": 70.2,
        },
        {
          "x": 35.51,
          "y": 70.2,
        },
        {
          "x": 35.51,
          "y": 85.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M96.76,199.5L87.76,202.5L87.76,196.5Z",
      "classes": [],
      "d": "M35.51,132.4L35.51,193.5Q35.51,199.5 41.51,199.5L87.76,199.5",
      "id": "B->C#1",
      "line": "solid",
      "points": [
        {
          "x": 35.51,
          "y": 132.4,
        },
        {
          "x": 35.51,
          "y": 199.5,
        },
        {
          "x": 87.76,
          "y": 199.5,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M101.51,46.2L104.51,55.2L98.51,55.2Z",
      "classes": [],
      "d": "M111.01,180.4L111.01,92.03C111.01,79.75 101.51,79.75 101.51,67.47L101.51,55.2",
      "id": "C->A#2",
      "line": "solid",
      "points": [
        {
          "x": 111.01,
          "y": 180.4,
        },
        {
          "x": 111.01,
          "y": 113.3,
        },
        {
          "x": 111.01,
          "y": 79.75,
        },
        {
          "x": 101.51,
          "y": 79.75,
        },
        {
          "x": 101.51,
          "y": 55.2,
        },
      ],
      "reversed": true,
      "source": "C",
      "span": {
        "column": 3,
        "length": 7,
        "line": 4,
        "offset": 35,
      },
      "startArrow": "none",
      "target": "A",
    },
    {
      "arrow": "arrow",
      "arrowD": "M44.51,122.43L53.51,119.43L53.51,125.43Z",
      "classes": [],
      "d": "M44.51,104.17L74.51,104.17Q80.51,104.17 80.51,110.17L80.51,116.43Q80.51,122.43 74.51,122.43L53.51,122.43",
      "id": "B->B#3",
      "line": "solid",
      "points": [
        {
          "x": 44.51,
          "y": 104.17,
        },
        {
          "x": 80.51,
          "y": 104.17,
        },
        {
          "x": 80.51,
          "y": 122.43,
        },
        {
          "x": 53.51,
          "y": 122.43,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 7,
        "line": 5,
        "offset": 45,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M120.01,180.4L117.01,171.4L123.01,171.4Z",
      "classes": [],
      "d": "M110.51,46.2L110.51,62.98C110.51,79.75 120.01,79.75 120.01,96.53L120.01,171.4",
      "id": "A->C#4",
      "line": "solid",
      "points": [
        {
          "x": 110.51,
          "y": 46.2,
        },
        {
          "x": 110.51,
          "y": 79.75,
        },
        {
          "x": 120.01,
          "y": 79.75,
        },
        {
          "x": 120.01,
          "y": 113.3,
        },
        {
          "x": 120.01,
          "y": 171.4,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 6,
        "offset": 55,
      },
      "startArrow": "none",
      "target": "C",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "A",
        ],
        "width": 8.98,
      },
      "outline": "M-12.49,-19.1L12.49,-19.1A6,6 0 0 1 18.49,-13.1L18.49,13.1A6,6 0 0 1 12.49,19.1L-12.49,19.1A6,6 0 0 1 -18.49,13.1L-18.49,-13.1A6,6 0 0 1 -12.49,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.98,
      "x": 101.51,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.51,
      "x": 26.25,
      "y": 113.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "C",
        ],
        "width": 9.5,
      },
      "outline": "M-12.75,-19.1L12.75,-19.1A6,6 0 0 1 18.75,-13.1L18.75,13.1A6,6 0 0 1 12.75,19.1L-12.75,19.1A6,6 0 0 1 -18.75,13.1L-18.75,-13.1A6,6 0 0 1 -12.75,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "width": 37.5,
      "x": 115.51,
      "y": 199.5,
    },
  ],
  "size": {
    "height": 226.6,
    "width": 142.26,
  },
}
`;

exports[`flowchartFamily > 'decision TB' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M127.24,94.2L124.24,85.2L130.24,85.2Z",
      "classes": [],
      "d": "M127.24,46.2L127.24,85.2",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 127.24,
          "y": 46.2,
        },
        {
          "x": 127.24,
          "y": 85.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 24,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M45.23,277.5L42.23,268.5L48.23,268.5Z",
      "classes": [],
      "d": "M122.74,161.72L122.74,185.41Q122.74,191.41 116.74,191.41L51.23,191.41Q45.23,191.41 45.23,197.41L45.23,210.7M45.23,231.5L45.23,268.5",
      "id": "B->C#1",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "yes",
          ],
          "width": 20.09,
        },
        "x": 45.23,
        "y": 221.1,
      },
      "line": "solid",
      "points": [
        {
          "x": 122.74,
          "y": 161.72,
        },
        {
          "x": 122.74,
          "y": 191.41,
        },
        {
          "x": 45.23,
          "y": 191.41,
        },
        {
          "x": 45.23,
          "y": 221.1,
        },
        {
          "x": 45.23,
          "y": 268.5,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 21,
        "line": 3,
        "offset": 42,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M140.31,277.5L137.31,268.5L143.31,268.5Z",
      "classes": [],
      "d": "M122.74,161.72L122.74,210.7M122.74,231.5L122.74,240.4C122.74,249.3 140.31,249.3 140.31,258.2L140.31,268.5",
      "id": "B->D#2",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "no",
          ],
          "width": 14.29,
        },
        "x": 127.24,
        "y": 221.1,
      },
      "line": "solid",
      "points": [
        {
          "x": 122.74,
          "y": 161.72,
        },
        {
          "x": 122.74,
          "y": 221.1,
        },
        {
          "x": 122.74,
          "y": 249.3,
        },
        {
          "x": 140.31,
          "y": 249.3,
        },
        {
          "x": 140.31,
          "y": 268.5,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 16,
        "line": 4,
        "offset": 66,
      },
      "startArrow": "none",
      "target": "D",
    },
    {
      "arrow": "arrow",
      "arrowD": "M131.74,161.72L134.74,170.72L128.74,170.72Z",
      "classes": [],
      "d": "M149.31,277.5L149.31,201.76C149.31,191.41 131.74,191.41 131.74,181.07L131.74,170.72",
      "id": "D->B#3",
      "line": "solid",
      "points": [
        {
          "x": 149.31,
          "y": 277.5,
        },
        {
          "x": 149.31,
          "y": 221.1,
        },
        {
          "x": 149.31,
          "y": 191.41,
        },
        {
          "x": 131.74,
          "y": 191.41,
        },
        {
          "x": 131.74,
          "y": 170.72,
        },
      ],
      "reversed": true,
      "source": "D",
      "span": {
        "column": 3,
        "length": 7,
        "line": 5,
        "offset": 85,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M45.23,363.7L42.23,354.7L48.23,354.7Z",
      "classes": [],
      "d": "M45.23,315.7L45.23,354.7",
      "id": "C->E#4",
      "line": "solid",
      "points": [
        {
          "x": 45.23,
          "y": 315.7,
        },
        {
          "x": 45.23,
          "y": 354.7,
        },
      ],
      "reversed": false,
      "source": "C",
      "span": {
        "column": 3,
        "length": 15,
        "line": 6,
        "offset": 95,
      },
      "startArrow": "none",
      "target": "E",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Start",
        ],
        "width": 29.06,
      },
      "outline": "M-16.43,-19.1L16.43,-19.1A19.1,19.1 0 0 1 35.53,0L35.53,0A19.1,19.1 0 0 1 16.43,19.1L-16.43,19.1A19.1,19.1 0 0 1 -35.53,0L-35.53,0A19.1,19.1 0 0 1 -16.43,-19.1Z",
      "shape": "stadium",
      "span": {
        "column": 3,
        "length": 24,
        "line": 2,
        "offset": 15,
      },
      "width": 71.06,
      "x": 127.24,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 70.5,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Ready?",
        ],
        "width": 45.18,
      },
      "outline": "M0,-35.25L53.26,0L0,35.25L-53.26,0Z",
      "shape": "diamond",
      "span": {
        "column": 3,
        "length": 24,
        "line": 2,
        "offset": 15,
      },
      "width": 106.52,
      "x": 127.24,
      "y": 129.45,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Publish",
        ],
        "width": 45.24,
      },
      "outline": "M-30.62,-19.1L30.62,-19.1A6,6 0 0 1 36.62,-13.1L36.62,13.1A6,6 0 0 1 30.62,19.1L-30.62,19.1A6,6 0 0 1 -36.62,13.1L-36.62,-13.1A6,6 0 0 1 -30.62,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 21,
        "line": 3,
        "offset": 42,
      },
      "width": 73.24,
      "x": 45.23,
      "y": 296.6,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "D",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Fix",
        ],
        "width": 17.93,
      },
      "outline": "M-16.96,-19.1L16.96,-19.1A6,6 0 0 1 22.96,-13.1L22.96,13.1A6,6 0 0 1 16.96,19.1L-16.96,19.1A6,6 0 0 1 -22.96,13.1L-22.96,-13.1A6,6 0 0 1 -16.96,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 16,
        "line": 4,
        "offset": 66,
      },
      "width": 45.93,
      "x": 144.81,
      "y": 296.6,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "E",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Done",
        ],
        "width": 32.45,
      },
      "outline": "M-18.13,-19.1L18.13,-19.1A19.1,19.1 0 0 1 37.23,0L37.23,0A19.1,19.1 0 0 1 18.13,19.1L-18.13,19.1A19.1,19.1 0 0 1 -37.23,0L-37.23,0A19.1,19.1 0 0 1 -18.13,-19.1Z",
      "shape": "stadium",
      "span": {
        "column": 3,
        "length": 15,
        "line": 6,
        "offset": 95,
      },
      "width": 74.45,
      "x": 45.23,
      "y": 382.8,
    },
  ],
  "size": {
    "height": 409.9,
    "width": 188.5,
  },
}
`;

exports[`flowchartFamily > 'disconnected components' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M26.49,94.2L23.49,85.2L29.49,85.2Z",
      "classes": [],
      "d": "M26.49,46.2L26.49,85.2",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 26.49,
          "y": 46.2,
        },
        {
          "x": 26.49,
          "y": 85.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M103.73,94.2L100.73,85.2L106.73,85.2Z",
      "classes": [],
      "d": "M103.73,46.2L103.73,85.2",
      "id": "C->D#1",
      "line": "solid",
      "points": [
        {
          "x": 103.73,
          "y": 46.2,
        },
        {
          "x": 103.73,
          "y": 85.2,
        },
      ],
      "reversed": false,
      "source": "C",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "startArrow": "none",
      "target": "D",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "A",
        ],
        "width": 8.98,
      },
      "outline": "M-12.49,-19.1L12.49,-19.1A6,6 0 0 1 18.49,-13.1L18.49,13.1A6,6 0 0 1 12.49,19.1L-12.49,19.1A6,6 0 0 1 -18.49,13.1L-18.49,-13.1A6,6 0 0 1 -12.49,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.98,
      "x": 26.49,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.51,
      "x": 26.49,
      "y": 113.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "C",
        ],
        "width": 9.5,
      },
      "outline": "M-12.75,-19.1L12.75,-19.1A6,6 0 0 1 18.75,-13.1L18.75,13.1A6,6 0 0 1 12.75,19.1L-12.75,19.1A6,6 0 0 1 -18.75,13.1L-18.75,-13.1A6,6 0 0 1 -12.75,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "width": 37.5,
      "x": 103.73,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "D",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "D",
        ],
        "width": 9.38,
      },
      "outline": "M-12.69,-19.1L12.69,-19.1A6,6 0 0 1 18.69,-13.1L18.69,13.1A6,6 0 0 1 12.69,19.1L-12.69,19.1A6,6 0 0 1 -18.69,13.1L-18.69,-13.1A6,6 0 0 1 -12.69,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "width": 37.38,
      "x": 103.73,
      "y": 113.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "E",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "E",
        ],
        "width": 7.82,
      },
      "outline": "M-12,-19.1L12,-19.1A6,6 0 0 1 18,-13.1L18,13.1A6,6 0 0 1 12,19.1L-12,19.1A6,6 0 0 1 -18,13.1L-18,-13.1A6,6 0 0 1 -12,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 1,
        "line": 4,
        "offset": 35,
      },
      "width": 36,
      "x": 180.48,
      "y": 27.1,
    },
  ],
  "size": {
    "height": 140.4,
    "width": 206.48,
  },
}
`;

exports[`flowchartFamily > 'every shape' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M59.43,94.2L56.43,85.2L62.43,85.2Z",
      "classes": [],
      "d": "M59.43,46.2L59.43,85.2",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 46.2,
        },
        {
          "x": 59.43,
          "y": 85.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,180.4L56.43,171.4L62.43,171.4Z",
      "classes": [],
      "d": "M59.43,132.4L59.43,171.4",
      "id": "B->C#1",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 132.4,
        },
        {
          "x": 59.43,
          "y": 171.4,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,266.6L56.43,257.6L62.43,257.6Z",
      "classes": [],
      "d": "M59.43,218.6L59.43,257.6",
      "id": "C->D#2",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 218.6,
        },
        {
          "x": 59.43,
          "y": 257.6,
        },
      ],
      "reversed": false,
      "source": "C",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "D",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,352.8L56.43,343.8L62.43,343.8Z",
      "classes": [],
      "d": "M59.43,304.8L59.43,343.8",
      "id": "D->E#3",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 304.8,
        },
        {
          "x": 59.43,
          "y": 343.8,
        },
      ],
      "reversed": false,
      "source": "D",
      "span": {
        "column": 3,
        "length": 50,
        "line": 3,
        "offset": 68,
      },
      "startArrow": "none",
      "target": "E",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,455L56.43,446L62.43,446Z",
      "classes": [],
      "d": "M59.43,407L59.43,446",
      "id": "E->F#4",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 407,
        },
        {
          "x": 59.43,
          "y": 446,
        },
      ],
      "reversed": false,
      "source": "E",
      "span": {
        "column": 3,
        "length": 50,
        "line": 3,
        "offset": 68,
      },
      "startArrow": "none",
      "target": "F",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,563.47L56.43,554.47L62.43,554.47Z",
      "classes": [],
      "d": "M59.43,515.47L59.43,554.47",
      "id": "F->G#5",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 515.47,
        },
        {
          "x": 59.43,
          "y": 554.47,
        },
      ],
      "reversed": false,
      "source": "F",
      "span": {
        "column": 3,
        "length": 50,
        "line": 3,
        "offset": 68,
      },
      "startArrow": "none",
      "target": "G",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,687.09L56.43,678.09L62.43,678.09Z",
      "classes": [],
      "d": "M59.43,639.09L59.43,678.09",
      "id": "G->H#6",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 639.09,
        },
        {
          "x": 59.43,
          "y": 678.09,
        },
      ],
      "reversed": false,
      "source": "G",
      "span": {
        "column": 3,
        "length": 40,
        "line": 4,
        "offset": 121,
      },
      "startArrow": "none",
      "target": "H",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,805.59L56.43,796.59L62.43,796.59Z",
      "classes": [],
      "d": "M59.43,757.59L59.43,796.59",
      "id": "H->I#7",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 757.59,
        },
        {
          "x": 59.43,
          "y": 796.59,
        },
      ],
      "reversed": false,
      "source": "H",
      "span": {
        "column": 3,
        "length": 40,
        "line": 4,
        "offset": 121,
      },
      "startArrow": "none",
      "target": "I",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,891.79L56.43,882.79L62.43,882.79Z",
      "classes": [],
      "d": "M59.43,843.79L59.43,882.79",
      "id": "I->J#8",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 843.79,
        },
        {
          "x": 59.43,
          "y": 882.79,
        },
      ],
      "reversed": false,
      "source": "I",
      "span": {
        "column": 3,
        "length": 40,
        "line": 4,
        "offset": 121,
      },
      "startArrow": "none",
      "target": "J",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,977.99L56.43,968.99L62.43,968.99Z",
      "classes": [],
      "d": "M59.43,929.99L59.43,968.99",
      "id": "J->K#9",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 929.99,
        },
        {
          "x": 59.43,
          "y": 968.99,
        },
      ],
      "reversed": false,
      "source": "J",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "startArrow": "none",
      "target": "K",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,1064.19L56.43,1055.19L62.43,1055.19Z",
      "classes": [],
      "d": "M59.43,1016.19L59.43,1055.19",
      "id": "K->L#10",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 1016.19,
        },
        {
          "x": 59.43,
          "y": 1055.19,
        },
      ],
      "reversed": false,
      "source": "K",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "startArrow": "none",
      "target": "L",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,1150.39L56.43,1141.39L62.43,1141.39Z",
      "classes": [],
      "d": "M59.43,1102.39L59.43,1141.39",
      "id": "L->M#11",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 1102.39,
        },
        {
          "x": 59.43,
          "y": 1141.39,
        },
      ],
      "reversed": false,
      "source": "L",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "startArrow": "none",
      "target": "M",
    },
    {
      "arrow": "arrow",
      "arrowD": "M59.43,1236.59L56.43,1227.59L62.43,1227.59Z",
      "classes": [],
      "d": "M59.43,1188.59L59.43,1227.59",
      "id": "M->N#12",
      "line": "solid",
      "points": [
        {
          "x": 59.43,
          "y": 1188.59,
        },
        {
          "x": 59.43,
          "y": 1227.59,
        },
      ],
      "reversed": false,
      "source": "M",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "startArrow": "none",
      "target": "N",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Rect",
        ],
        "width": 27.64,
      },
      "outline": "M-21.82,-19.1L21.82,-19.1A6,6 0 0 1 27.82,-13.1L27.82,13.1A6,6 0 0 1 21.82,19.1L-21.82,19.1A6,6 0 0 1 -27.82,13.1L-27.82,-13.1A6,6 0 0 1 -21.82,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "width": 55.64,
      "x": 59.43,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Round",
        ],
        "width": 39.5,
      },
      "outline": "M-15.75,-19.1L15.75,-19.1A18,18 0 0 1 33.75,-1.1L33.75,1.1A18,18 0 0 1 15.75,19.1L-15.75,19.1A18,18 0 0 1 -33.75,1.1L-33.75,-1.1A18,18 0 0 1 -15.75,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "width": 67.5,
      "x": 59.43,
      "y": 113.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Stadium",
        ],
        "width": 50.09,
      },
      "outline": "M-26.95,-19.1L26.95,-19.1A19.1,19.1 0 0 1 46.05,0L46.05,0A19.1,19.1 0 0 1 26.95,19.1L-26.95,19.1A19.1,19.1 0 0 1 -46.05,0L-46.05,0A19.1,19.1 0 0 1 -26.95,-19.1Z",
      "shape": "stadium",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "width": 92.09,
      "x": 59.43,
      "y": 199.5,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "D",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Sub",
        ],
        "width": 23.99,
      },
      "outline": "M-28,-19.1L28,-19.1A6,6 0 0 1 34,-13.1L34,13.1A6,6 0 0 1 28,19.1L-28,19.1A6,6 0 0 1 -34,13.1L-34,-13.1A6,6 0 0 1 -28,-19.1ZM-26,-19.1L-26,19.1M26,-19.1L26,19.1",
      "shape": "subroutine",
      "span": {
        "column": 3,
        "length": 50,
        "line": 2,
        "offset": 15,
      },
      "width": 67.99,
      "x": 59.43,
      "y": 285.7,
    },
    {
      "classes": [],
      "height": 54.2,
      "id": "E",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Store",
        ],
        "width": 32.88,
      },
      "outline": "M-30.44,-19.1A30.44,8 0 0 1 30.44,-19.1L30.44,19.1A30.44,8 0 0 1 -30.44,19.1ZM-30.44,-19.1A30.44,8 0 0 0 30.44,-19.1",
      "shape": "cylinder",
      "span": {
        "column": 3,
        "length": 50,
        "line": 3,
        "offset": 68,
      },
      "width": 60.88,
      "x": 59.43,
      "y": 379.9,
    },
    {
      "classes": [],
      "height": 60.47,
      "id": "F",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Circle",
        ],
        "width": 36.15,
      },
      "outline": "M-30.24,0A30.24,30.24 0 1 0 30.24,0A30.24,30.24 0 1 0 -30.24,0Z",
      "shape": "circle",
      "span": {
        "column": 3,
        "length": 50,
        "line": 3,
        "offset": 68,
      },
      "width": 60.47,
      "x": 59.43,
      "y": 485.24,
    },
    {
      "classes": [],
      "height": 75.62,
      "id": "G",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Double",
        ],
        "width": 44,
      },
      "outline": "M-37.81,0A37.81,37.81 0 1 0 37.81,0A37.81,37.81 0 1 0 -37.81,0ZM-33.81,0A33.81,33.81 0 1 0 33.81,0A33.81,33.81 0 1 0 -33.81,0Z",
      "shape": "double-circle",
      "span": {
        "column": 3,
        "length": 50,
        "line": 3,
        "offset": 68,
      },
      "width": 75.62,
      "x": 59.43,
      "y": 601.28,
    },
    {
      "classes": [],
      "height": 70.5,
      "id": "H",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Choice",
        ],
        "width": 43.15,
      },
      "outline": "M0,-35.25L51.43,0L0,35.25L-51.43,0Z",
      "shape": "diamond",
      "span": {
        "column": 3,
        "length": 40,
        "line": 4,
        "offset": 121,
      },
      "width": 102.87,
      "x": 59.43,
      "y": 722.34,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "I",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Hex",
        ],
        "width": 24.35,
      },
      "outline": "M-16.63,-19.1L16.63,-19.1L35.73,0L16.63,19.1L-16.63,19.1L-35.73,0Z",
      "shape": "hexagon",
      "span": {
        "column": 3,
        "length": 40,
        "line": 4,
        "offset": 121,
      },
      "width": 71.45,
      "x": 59.43,
      "y": 824.69,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "J",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "In",
        ],
        "width": 11.18,
      },
      "outline": "M-11.95,-19.1L27.23,-19.1L11.95,19.1L-27.23,19.1Z",
      "shape": "parallelogram",
      "span": {
        "column": 3,
        "length": 40,
        "line": 4,
        "offset": 121,
      },
      "width": 54.46,
      "x": 59.43,
      "y": 910.89,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "K",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Out",
        ],
        "width": 21.89,
      },
      "outline": "M-32.58,-19.1L17.3,-19.1L32.58,19.1L-17.3,19.1Z",
      "shape": "parallelogram-alt",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "width": 65.17,
      "x": 59.43,
      "y": 997.09,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "L",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Trap",
        ],
        "width": 28.56,
      },
      "outline": "M-20.64,-19.1L20.64,-19.1L35.92,19.1L-35.92,19.1Z",
      "shape": "trapezoid",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "width": 71.84,
      "x": 59.43,
      "y": 1083.29,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "M",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Alt",
        ],
        "width": 16.82,
      },
      "outline": "M-30.05,-19.1L30.05,-19.1L14.77,19.1L-14.77,19.1Z",
      "shape": "trapezoid-alt",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "width": 60.1,
      "x": 59.43,
      "y": 1169.49,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "N",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Flag",
        ],
        "width": 26.55,
      },
      "outline": "M-34.91,-19.1L34.91,-19.1L34.91,19.1L-34.91,19.1L-19.63,0Z",
      "shape": "asymmetric",
      "span": {
        "column": 3,
        "length": 53,
        "line": 5,
        "offset": 164,
      },
      "width": 69.83,
      "x": 59.43,
      "y": 1255.69,
    },
  ],
  "size": {
    "height": 1282.79,
    "width": 118.87,
  },
}
`;

exports[`flowchartFamily > 'fan groups and classes' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M92.98,27.1L83.98,30.1L83.98,24.1Z",
      "classes": [],
      "d": "M44.98,27.1L83.98,27.1",
      "id": "A->C#0",
      "line": "solid",
      "points": [
        {
          "x": 44.98,
          "y": 27.1,
        },
        {
          "x": 83.98,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M93.04,95.2L84.04,98.2L84.04,92.2Z",
      "classes": [],
      "d": "M44.98,37.2L63.01,37.2Q69.01,37.2 69.01,43.2L69.01,89.2Q69.01,95.2 75.01,95.2L84.04,95.2",
      "id": "A->D#1",
      "line": "solid",
      "points": [
        {
          "x": 44.98,
          "y": 37.2,
        },
        {
          "x": 69.01,
          "y": 37.2,
        },
        {
          "x": 69.01,
          "y": 95.2,
        },
        {
          "x": 84.04,
          "y": 95.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "startArrow": "none",
      "target": "D",
    },
    {
      "arrow": "arrow",
      "arrowD": "M92.98,37.2L83.98,40.2L83.98,34.2Z",
      "classes": [],
      "d": "M44.74,95.2L53.86,95.2Q59.86,95.2 59.86,89.2L59.86,43.2Q59.86,37.2 65.86,37.2L83.98,37.2",
      "id": "B->C#2",
      "line": "solid",
      "points": [
        {
          "x": 44.74,
          "y": 95.2,
        },
        {
          "x": 59.86,
          "y": 95.2,
        },
        {
          "x": 59.86,
          "y": 37.2,
        },
        {
          "x": 83.98,
          "y": 37.2,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M93.04,105.3L84.04,108.3L84.04,102.3Z",
      "classes": [],
      "d": "M44.74,105.3L84.04,105.3",
      "id": "B->D#3",
      "line": "solid",
      "points": [
        {
          "x": 44.74,
          "y": 105.3,
        },
        {
          "x": 84.04,
          "y": 105.3,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "startArrow": "none",
      "target": "D",
    },
    {
      "arrow": "arrow",
      "arrowD": "M178.48,27.1L169.48,30.1L169.48,24.1Z",
      "classes": [],
      "d": "M130.48,27.1L169.48,27.1",
      "id": "C->E#4",
      "line": "solid",
      "points": [
        {
          "x": 130.48,
          "y": 27.1,
        },
        {
          "x": 169.48,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "C",
      "span": {
        "column": 3,
        "length": 16,
        "line": 4,
        "offset": 61,
      },
      "startArrow": "none",
      "target": "E",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "A",
        ],
        "width": 8.98,
      },
      "outline": "M-12.49,-19.1L12.49,-19.1A6,6 0 0 1 18.49,-13.1L18.49,13.1A6,6 0 0 1 12.49,19.1L-12.49,19.1A6,6 0 0 1 -18.49,13.1L-18.49,-13.1A6,6 0 0 1 -12.49,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "width": 36.98,
      "x": 26.49,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "width": 36.51,
      "x": 26.49,
      "y": 105.3,
    },
    {
      "classes": [
        "danger",
      ],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "C",
        ],
        "width": 9.5,
      },
      "outline": "M-12.75,-19.1L12.75,-19.1A6,6 0 0 1 18.75,-13.1L18.75,13.1A6,6 0 0 1 12.75,19.1L-12.75,19.1A6,6 0 0 1 -18.75,13.1L-18.75,-13.1A6,6 0 0 1 -12.75,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "width": 37.5,
      "x": 111.73,
      "y": 27.1,
    },
    {
      "classes": [
        "danger",
      ],
      "height": 38.2,
      "id": "D",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "D",
        ],
        "width": 9.38,
      },
      "outline": "M-12.69,-19.1L12.69,-19.1A6,6 0 0 1 18.69,-13.1L18.69,13.1A6,6 0 0 1 12.69,19.1L-12.69,19.1A6,6 0 0 1 -18.69,13.1L-18.69,-13.1A6,6 0 0 1 -12.69,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 15,
        "line": 3,
        "offset": 43,
      },
      "width": 37.38,
      "x": 111.73,
      "y": 105.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "E",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "E",
        ],
        "width": 7.82,
      },
      "outline": "M-12,-19.1L12,-19.1A6,6 0 0 1 18,-13.1L18,13.1A6,6 0 0 1 12,19.1L-12,19.1A6,6 0 0 1 -18,13.1L-18,-13.1A6,6 0 0 1 -12,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 16,
        "line": 4,
        "offset": 61,
      },
      "width": 36,
      "x": 196.48,
      "y": 27.1,
    },
  ],
  "size": {
    "height": 132.4,
    "width": 222.48,
  },
}
`;

exports[`flowchartFamily > 'long labels wrap' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M116.53,130.6L113.53,121.6L119.53,121.6Z",
      "classes": [],
      "d": "M116.53,82.6L116.53,121.6",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 116.53,
          "y": 82.6,
        },
        {
          "x": 116.53,
          "y": 121.6,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 83,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M116.53,298.4L113.53,289.4L119.53,289.4Z",
      "classes": [],
      "d": "M116.53,168.8L116.53,214.8M116.53,252.4L116.53,289.4",
      "id": "B->C#1",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 33.6,
          "lineHeight": 16.8,
          "lines": [
            "a somewhat long edge label as",
            "well",
          ],
          "width": 176.74,
        },
        "x": 116.53,
        "y": 233.6,
      },
      "line": "solid",
      "points": [
        {
          "x": 116.53,
          "y": 168.8,
        },
        {
          "x": 116.53,
          "y": 233.6,
        },
        {
          "x": 116.53,
          "y": 289.4,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 45,
        "line": 3,
        "offset": 101,
      },
      "startArrow": "none",
      "target": "C",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 74.6,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 54.6,
        "lineHeight": 18.2,
        "lines": [
          "A label long enough that the",
          "greedy wrapper has to break it",
          "across lines",
        ],
        "width": 189.06,
      },
      "outline": "M-102.53,-37.3L102.53,-37.3A6,6 0 0 1 108.53,-31.3L108.53,31.3A6,6 0 0 1 102.53,37.3L-102.53,37.3A6,6 0 0 1 -108.53,31.3L-108.53,-31.3A6,6 0 0 1 -102.53,-37.3Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 83,
        "line": 2,
        "offset": 15,
      },
      "width": 217.06,
      "x": 116.53,
      "y": 45.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 83,
        "line": 2,
        "offset": 15,
      },
      "width": 36.51,
      "x": 116.53,
      "y": 149.7,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "C",
        ],
        "width": 9.5,
      },
      "outline": "M-12.75,-19.1L12.75,-19.1A6,6 0 0 1 18.75,-13.1L18.75,13.1A6,6 0 0 1 12.75,19.1L-12.75,19.1A6,6 0 0 1 -18.75,13.1L-18.75,-13.1A6,6 0 0 1 -12.75,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 45,
        "line": 3,
        "offset": 101,
      },
      "width": 37.5,
      "x": 116.53,
      "y": 317.5,
    },
  ],
  "size": {
    "height": 344.6,
    "width": 233.06,
  },
}
`;

exports[`flowchartFamily > 'nested subgraphs' lays out to a golden scene 1`] = `
{
  "clusters": [
    {
      "box": {
        "height": 424.8,
        "width": 127.47,
        "x": 8,
        "y": 94.2,
      },
      "children": [
        {
          "box": {
            "height": 188.4,
            "width": 95.47,
            "x": 24,
            "y": 314.6,
          },
          "children": [],
          "classes": [],
          "depth": 1,
          "id": "deploy",
          "span": {
            "column": 5,
            "length": 24,
            "line": 5,
            "offset": 91,
          },
          "title": {
            "box": {
              "baseline": 11.66,
              "height": 15.4,
              "lineHeight": 15.4,
              "lines": [
                "Deploy",
              ],
              "width": 38.23,
            },
            "x": 59.12,
            "y": 334.6,
          },
        },
      ],
      "classes": [],
      "depth": 0,
      "id": "pipeline",
      "span": {
        "column": 3,
        "length": 28,
        "line": 3,
        "offset": 33,
      },
      "title": {
        "box": {
          "baseline": 11.66,
          "height": 15.4,
          "lineHeight": 15.4,
          "lines": [
            "Pipeline",
          ],
          "width": 43.23,
        },
        "x": 45.61,
        "y": 114.2,
      },
    },
  ],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M71.73,142.2L68.73,133.2L74.73,133.2Z",
      "classes": [],
      "d": "M71.73,46.2L71.73,133.2",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 71.73,
          "y": 46.2,
        },
        {
          "x": 71.73,
          "y": 94.2,
        },
        {
          "x": 71.73,
          "y": 133.2,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 15,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M71.73,228.4L68.73,219.4L74.73,219.4Z",
      "classes": [],
      "d": "M71.73,180.4L71.73,219.4",
      "id": "B->C#1",
      "line": "solid",
      "points": [
        {
          "x": 71.73,
          "y": 180.4,
        },
        {
          "x": 71.73,
          "y": 219.4,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 5,
        "length": 20,
        "line": 4,
        "offset": 66,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M83.73,362.6L80.73,353.6L86.73,353.6Z",
      "classes": [],
      "d": "M83.73,266.6L83.73,353.6",
      "id": "C->D#2",
      "line": "solid",
      "points": [
        {
          "x": 83.73,
          "y": 266.6,
        },
        {
          "x": 83.73,
          "y": 314.6,
        },
        {
          "x": 83.73,
          "y": 353.6,
        },
      ],
      "reversed": false,
      "source": "C",
      "span": {
        "column": 7,
        "length": 14,
        "line": 6,
        "offset": 122,
      },
      "startArrow": "none",
      "target": "D",
    },
    {
      "arrow": "arrow",
      "arrowD": "M71.73,448.8L68.73,439.8L74.73,439.8Z",
      "classes": [],
      "d": "M71.73,400.8L71.73,439.8",
      "id": "D->E#3",
      "line": "solid",
      "points": [
        {
          "x": 71.73,
          "y": 400.8,
        },
        {
          "x": 71.73,
          "y": 439.8,
        },
      ],
      "reversed": false,
      "source": "D",
      "span": {
        "column": 7,
        "length": 13,
        "line": 7,
        "offset": 143,
      },
      "startArrow": "none",
      "target": "E",
    },
    {
      "arrow": "arrow",
      "arrowD": "M71.73,567L68.73,558L74.73,558Z",
      "classes": [],
      "d": "M71.73,487L71.73,558",
      "id": "E->F#4",
      "line": "solid",
      "points": [
        {
          "x": 71.73,
          "y": 487,
        },
        {
          "x": 71.73,
          "y": 519,
        },
        {
          "x": 71.73,
          "y": 558,
        },
      ],
      "reversed": false,
      "source": "E",
      "span": {
        "column": 3,
        "length": 13,
        "line": 10,
        "offset": 173,
      },
      "startArrow": "none",
      "target": "F",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Author",
        ],
        "width": 41.3,
      },
      "outline": "M-28.65,-19.1L28.65,-19.1A6,6 0 0 1 34.65,-13.1L34.65,13.1A6,6 0 0 1 28.65,19.1L-28.65,19.1A6,6 0 0 1 -34.65,13.1L-34.65,-13.1A6,6 0 0 1 -28.65,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 15,
        "line": 2,
        "offset": 15,
      },
      "width": 69.3,
      "x": 71.73,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Build",
        ],
        "width": 30.89,
      },
      "outline": "M-23.44,-19.1L23.44,-19.1A6,6 0 0 1 29.44,-13.1L29.44,13.1A6,6 0 0 1 23.44,19.1L-23.44,19.1A6,6 0 0 1 -29.44,13.1L-29.44,-13.1A6,6 0 0 1 -23.44,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 15,
        "line": 2,
        "offset": 15,
      },
      "width": 58.89,
      "x": 71.73,
      "y": 161.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Test",
        ],
        "width": 27.11,
      },
      "outline": "M-21.55,-19.1L21.55,-19.1A6,6 0 0 1 27.55,-13.1L27.55,13.1A6,6 0 0 1 21.55,19.1L-21.55,19.1A6,6 0 0 1 -27.55,13.1L-27.55,-13.1A6,6 0 0 1 -21.55,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 5,
        "length": 20,
        "line": 4,
        "offset": 66,
      },
      "width": 55.11,
      "x": 71.73,
      "y": 247.5,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "D",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Stage",
        ],
        "width": 35.47,
      },
      "outline": "M-25.73,-19.1L25.73,-19.1A6,6 0 0 1 31.73,-13.1L31.73,13.1A6,6 0 0 1 25.73,19.1L-25.73,19.1A6,6 0 0 1 -31.73,13.1L-31.73,-13.1A6,6 0 0 1 -25.73,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 7,
        "length": 14,
        "line": 6,
        "offset": 122,
      },
      "width": 63.47,
      "x": 71.73,
      "y": 381.7,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "E",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Prod",
        ],
        "width": 28.96,
      },
      "outline": "M-22.48,-19.1L22.48,-19.1A6,6 0 0 1 28.48,-13.1L28.48,13.1A6,6 0 0 1 22.48,19.1L-22.48,19.1A6,6 0 0 1 -28.48,13.1L-28.48,-13.1A6,6 0 0 1 -22.48,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 7,
        "length": 13,
        "line": 7,
        "offset": 143,
      },
      "width": 56.96,
      "x": 71.73,
      "y": 467.9,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "F",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Done",
        ],
        "width": 32.45,
      },
      "outline": "M-24.23,-19.1L24.23,-19.1A6,6 0 0 1 30.23,-13.1L30.23,13.1A6,6 0 0 1 24.23,19.1L-24.23,19.1A6,6 0 0 1 -30.23,13.1L-30.23,-13.1A6,6 0 0 1 -24.23,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 13,
        "line": 10,
        "offset": 173,
      },
      "width": 60.45,
      "x": 71.73,
      "y": 586.1,
    },
  ],
  "size": {
    "height": 613.2,
    "width": 143.47,
  },
}
`;

exports[`flowchartFamily > 'pipeline LR' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M200.66,27.1L191.66,30.1L191.66,24.1Z",
      "classes": [],
      "d": "M66.66,56.1L94.16,56.1Q100.16,56.1 100.16,50.1L100.16,33.1Q100.16,27.1 106.16,27.1L112.66,27.1M154.66,27.1L191.66,27.1",
      "id": "A->B#0",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "review",
          ],
          "width": 38,
        },
        "x": 133.66,
        "y": 27.1,
      },
      "line": "solid",
      "points": [
        {
          "x": 66.66,
          "y": 56.1,
        },
        {
          "x": 100.16,
          "y": 56.1,
        },
        {
          "x": 100.16,
          "y": 27.1,
        },
        {
          "x": 133.66,
          "y": 27.1,
        },
        {
          "x": 191.66,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 34,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M203.39,105.3L194.39,108.3L194.39,102.3Z",
      "classes": [],
      "d": "M66.66,76.3L94.16,76.3Q100.16,76.3 100.16,82.3L100.16,99.3Q100.16,105.3 106.16,105.3L115.55,105.3M151.77,105.3L194.39,105.3",
      "id": "A->C#1",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "reject",
          ],
          "width": 32.22,
        },
        "x": 133.66,
        "y": 105.3,
      },
      "line": "dotted",
      "points": [
        {
          "x": 66.66,
          "y": 76.3,
        },
        {
          "x": 100.16,
          "y": 76.3,
        },
        {
          "x": 100.16,
          "y": 105.3,
        },
        {
          "x": 133.66,
          "y": 105.3,
        },
        {
          "x": 194.39,
          "y": 105.3,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 27,
        "line": 3,
        "offset": 52,
      },
      "startArrow": "none",
      "target": "C",
    },
    {
      "arrow": "arrow",
      "arrowD": "M337.11,27.1L328.11,30.1L328.11,24.1Z",
      "classes": [],
      "d": "M289.11,27.1L328.11,27.1",
      "id": "B->D#2",
      "line": "thick",
      "points": [
        {
          "x": 289.11,
          "y": 27.1,
        },
        {
          "x": 328.11,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 18,
        "line": 4,
        "offset": 82,
      },
      "startArrow": "none",
      "target": "D",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Draft",
        ],
        "width": 30.66,
      },
      "outline": "M-23.33,-19.1L23.33,-19.1A6,6 0 0 1 29.33,-13.1L29.33,13.1A6,6 0 0 1 23.33,19.1L-23.33,19.1A6,6 0 0 1 -29.33,13.1L-29.33,-13.1A6,6 0 0 1 -23.33,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 34,
        "line": 2,
        "offset": 15,
      },
      "width": 58.66,
      "x": 37.33,
      "y": 66.2,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Approved",
        ],
        "width": 60.45,
      },
      "outline": "M-38.23,-19.1L38.23,-19.1A6,6 0 0 1 44.23,-13.1L44.23,13.1A6,6 0 0 1 38.23,19.1L-38.23,19.1A6,6 0 0 1 -44.23,13.1L-44.23,-13.1A6,6 0 0 1 -38.23,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 34,
        "line": 2,
        "offset": 15,
      },
      "width": 88.45,
      "x": 244.89,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Archived",
        ],
        "width": 55,
      },
      "outline": "M-35.5,-19.1L35.5,-19.1A6,6 0 0 1 41.5,-13.1L41.5,13.1A6,6 0 0 1 35.5,19.1L-35.5,19.1A6,6 0 0 1 -41.5,13.1L-41.5,-13.1A6,6 0 0 1 -35.5,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 27,
        "line": 3,
        "offset": 52,
      },
      "width": 83,
      "x": 244.89,
      "y": 105.3,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "D",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Published",
        ],
        "width": 60.79,
      },
      "outline": "M-38.39,-19.1L38.39,-19.1A6,6 0 0 1 44.39,-13.1L44.39,13.1A6,6 0 0 1 38.39,19.1L-38.39,19.1A6,6 0 0 1 -44.39,13.1L-44.39,-13.1A6,6 0 0 1 -38.39,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 18,
        "line": 4,
        "offset": 82,
      },
      "width": 88.79,
      "x": 381.51,
      "y": 27.1,
    },
  ],
  "size": {
    "height": 132.4,
    "width": 433.9,
  },
}
`;

exports[`flowchartFamily > 'right to left RL' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M130.01,27.1L139.01,24.1L139.01,30.1Z",
      "classes": [],
      "d": "M178.01,27.1L139.01,27.1",
      "id": "A->B#0",
      "line": "solid",
      "points": [
        {
          "x": 178.01,
          "y": 27.1,
        },
        {
          "x": 139.01,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "A",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "startArrow": "none",
      "target": "B",
    },
    {
      "arrow": "arrow",
      "arrowD": "M45.5,27.1L54.5,24.1L54.5,30.1Z",
      "classes": [],
      "d": "M93.5,27.1L54.5,27.1",
      "id": "B->C#1",
      "line": "solid",
      "points": [
        {
          "x": 93.5,
          "y": 27.1,
        },
        {
          "x": 54.5,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "B",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "startArrow": "none",
      "target": "C",
    },
  ],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "A",
        ],
        "width": 8.98,
      },
      "outline": "M-12.49,-19.1L12.49,-19.1A6,6 0 0 1 18.49,-13.1L18.49,13.1A6,6 0 0 1 12.49,19.1L-12.49,19.1A6,6 0 0 1 -18.49,13.1L-18.49,-13.1A6,6 0 0 1 -12.49,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.98,
      "x": 196.5,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "B",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "B",
        ],
        "width": 8.51,
      },
      "outline": "M-12.25,-19.1L12.25,-19.1A6,6 0 0 1 18.25,-13.1L18.25,13.1A6,6 0 0 1 12.25,19.1L-12.25,19.1A6,6 0 0 1 -18.25,13.1L-18.25,-13.1A6,6 0 0 1 -12.25,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 36.51,
      "x": 111.75,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "C",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "C",
        ],
        "width": 9.5,
      },
      "outline": "M-12.75,-19.1L12.75,-19.1A6,6 0 0 1 18.75,-13.1L18.75,13.1A6,6 0 0 1 12.75,19.1L-12.75,19.1A6,6 0 0 1 -18.75,13.1L-18.75,-13.1A6,6 0 0 1 -12.75,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 3,
        "offset": 25,
      },
      "width": 37.5,
      "x": 26.75,
      "y": 27.1,
    },
  ],
  "size": {
    "height": 54.2,
    "width": 222.98,
  },
}
`;

exports[`flowchartFamily > 'single node' lays out to a golden scene 1`] = `
{
  "clusters": [],
  "edges": [],
  "family": "flowchart",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "A",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Only",
        ],
        "width": 28.53,
      },
      "outline": "M-22.26,-19.1L22.26,-19.1A6,6 0 0 1 28.26,-13.1L28.26,13.1A6,6 0 0 1 22.26,19.1L-22.26,19.1A6,6 0 0 1 -28.26,13.1L-28.26,-13.1A6,6 0 0 1 -22.26,-19.1Z",
      "shape": "rect",
      "span": {
        "column": 3,
        "length": 7,
        "line": 2,
        "offset": 15,
      },
      "width": 56.53,
      "x": 36.26,
      "y": 27.1,
    },
  ],
  "size": {
    "height": 54.2,
    "width": 72.53,
  },
}
`;
